fix: white tree lines in dark mode (#235)

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -7714,6 +7714,10 @@ ul ul {
   color: white !important;
 }
 
+[data-theme=dark] .besogo-tree-line {
+  stroke: #cccccc;
+}
+
 
 #darkButtonImage
 {
